// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SeriesPostCard > should match snapshot for current post 1`] = `
<div>
  <div
    class="post current-post"
  >
    <h4
      class="mt-0"
    >
      <a
        class="focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-accent focus-visible:ring-offset-2"
        href="/writing/test-series-post"
      >
        Test Series Post
      </a>
    </h4>
  </div>
</div>
`;

exports[`SeriesPostCard > should match snapshot for default state 1`] = `
<div>
  <div
    class="post"
  >
    <h4
      class="mt-0"
    >
      <a
        class="focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-accent focus-visible:ring-offset-2"
        href="/writing/test-series-post"
      >
        Test Series Post
      </a>
    </h4>
    <p
      class="truncated-text"
    >
      This is part of a series.
    </p>
  </div>
</div>
`;

exports[`SeriesPostCard > should match snapshot for next post 1`] = `
<div>
  <div
    class="post next-post"
  >
    <a
      aria-label="Next post: Test Series Post"
      class="next-button focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-accent focus-visible:ring-offset-2 rounded-sm"
      href="/writing/test-series-post"
    >
      Next
    </a>
    <h4
      class="mt-0"
    >
      <a
        class="focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-accent focus-visible:ring-offset-2"
        href="/writing/test-series-post"
      >
        Test Series Post
      </a>
    </h4>
    <p
      class="truncated-text"
    >
      This is part of a series.
    </p>
  </div>
</div>
`;

exports[`SeriesPostCard > should match snapshot for past post 1`] = `
<div>
  <div
    class="post past-post"
  >
    <h4
      class="mt-0"
    >
      <a
        class="focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-accent focus-visible:ring-offset-2"
        href="/writing/test-series-post"
      >
        Test Series Post
      </a>
    </h4>
  </div>
</div>
`;
